--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
     ];
 
     const transport = [
-      { word: 'поезд', image: 'images/poe.jpg', audio: 'audio/poe.mp3' },
-      { word: 'машина', image: 'images/car.jpg', audio: 'audio/car.mp3' },
-      { word: 'самолёт', image: 'images/plane.jpg', audio: 'audio/plane.mp3' },
-      { word: 'пароход', image: 'images/ship.jpg', audio: 'audio/ship.mp3' },
-      { word: 'мотоцикл', image: 'images/moto.jpg', audio: 'audio/moto.mp3' },
-      { word: 'трамвай', image: 'images/tram.jpg', audio: 'audio/tram.mp3' }
+      { word: 'поезд', image: 'images/poezd.jpeg', audio: 'audio/poe.mp3' },
+      { word: 'машина', image: 'images/mashina.png', audio: 'audio/car.mp3' },
+      { word: 'самолёт', image: 'images/samolet.jpg', audio: 'audio/plane.mp3' },
+      { word: 'пароход', image: 'images/parahod.png', audio: 'audio/ship.mp3' },
+      { word: 'мотоцикл', image: 'images/moto.webp', audio: 'audio/moto.mp3' },
+      { word: 'трамвай', image: 'images/tram.webp', audio: 'audio/tram.mp3' }
     ];
 
     let currentTheme = [];
