Update image source for silver product card

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <div class="relative aspect-[4/5] overflow-hidden mb-8 bg-[#1a1a1a] luxury-border">
                         <img 
                             id="grid-img-silver"
-                            src="https://placehold.co/600x800/333333/FFFFFF/png?text=ФОТО+СЕРЕБРЯНОЙ+КНОПКИ" 
+                            src="images/kuku.jpg" 
                             alt="Серебряная кнопка Ютуб 100к подписчиков" 
                             class="product-img"
                             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';"
