--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     <div class="relative aspect-[4/5] overflow-hidden mb-8 bg-[#1a1a1a] luxury-border">
                         <img 
                             id="grid-img-like"
-                            src="https://placehold.co/600x800/f5f5f5/000000/png?text=ФОТО+ЛАЙК" 
+                            src="images/IMG_20251113_162956.jpg" 
                             alt="Кнопка Лайк" 
                             class="product-img"
                             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';"
@@ -483,9 +483,9 @@
                 price: "8 900 руб.",
                 desc: "Скульптурная композиция в виде знаменитого 'пальца вверх'. Выполнена из прочного композитного материала с ручной покраской. Отлично смотрится на рабочем столе стримера.",
                 images: [
-                    "https://placehold.co/800x800/f5f5f5/000000/png?text=LIKE+ФАС",
-                    "https://placehold.co/800x800/e0e0e0/000000/png?text=LIKE+БОК",
-                    "https://placehold.co/800x800/ffffff/000000/png?text=LIKE+УПАКОВКА"
+                    "images/IMG_20251113_162956.jpg",
+                    "images/IMG_20251113_163002.jpg",
+                    "images/IMG_20251113_163011.jpg"
                 ]
             }
         };
