Replace placeholder images with local images

--- a/index.html
+++ b/index.html
@@ -312,29 +312,29 @@
                 "images/IMG_20251113_163011.jpg"
             ],
             gold: [
-                "https://placehold.co/600x800/D4AF37/000000/png?text=ЗОЛОТО+ФАС",
-                "https://placehold.co/600x800/C5A028/000000/png?text=ЗОЛОТО+РАКУРС",
-                "https://placehold.co/600x800/F0C040/000000/png?text=ЗОЛОТО+УПАКОВКА"
+                "images/IMG_20251113_162956.jpg",
+                "images/IMG_20251113_163002.jpg",
+                "images/IMG_20251113_163011.jpg"
             ],
             telegram: [
-                "https://placehold.co/600x800/2AABEE/FFFFFF/png?text=TG+ФАС",
-                "https://placehold.co/600x800/2090D0/FFFFFF/png?text=TG+РАКУРС",
-                "https://placehold.co/600x800/50C0FF/FFFFFF/png?text=TG+ДЕТАЛИ"
+                "images/IMG_20251113_162956.jpg",
+                "images/IMG_20251113_163002.jpg",
+                "images/IMG_20251113_163011.jpg"
             ],
             instagram: [
-                "https://placehold.co/600x800/E1306C/FFFFFF/png?text=INSTA+ФАС",
-                "https://placehold.co/600x800/C12050/FFFFFF/png?text=INSTA+БОК",
-                "https://placehold.co/600x800/F15080/FFFFFF/png?text=INSTA+ДЕТАЛИ"
+                "images/IMG_20251113_162956.jpg",
+                "images/IMG_20251113_163002.jpg",
+                "images/IMG_20251113_163011.jpg"
             ],
             chatgpt: [
-                "https://placehold.co/600x800/10A37F/FFFFFF/png?text=GPT+ФАС",
-                "https://placehold.co/600x800/0E8060/FFFFFF/png?text=GPT+РАКУРС",
-                "https://placehold.co/600x800/20C090/FFFFFF/png?text=GPT+ДЕТАЛИ"
+                "images/IMG_20251113_162956.jpg",
+                "images/IMG_20251113_163002.jpg",
+                "images/IMG_20251113_163011.jpg"
             ],
             like: [
-                "https://placehold.co/600x800/f5f5f5/000000/png?text=LIKE+ФАС",
-                "https://placehold.co/600x800/e0e0e0/000000/png?text=LIKE+БОК",
-                "https://placehold.co/600x800/ffffff/000000/png?text=LIKE+УПАКОВКА"
+                "images/IMG_20251113_162956.jpg",
+                "images/IMG_20251113_163002.jpg",
+                "images/IMG_20251113_163011.jpg"
             ]
         };
 
