--- a/index.html
+++ b/index.html
@@ -198,13 +198,13 @@
                         <div class="image-slider" data-product="silver">
                             <div class="slider-track">
                                 <div class="slider-slide">
-                                    <img src="images/IMG_20251113_163002.jpg" alt="Серебряная кнопка" class="product-img">
+                                    <img src="images/Like11.jpg" alt="Серебряная кнопка" class="product-img">
                                 </div>
                                 <div class="slider-slide">
-                                    <img src="images/IMG_20251113_163002.jpg" alt="Серебряная кнопка" class="product-img">
+                                    <img src="images/Like21.jpg" alt="Серебряная кнопка" class="product-img">
                                 </div>
                                 <div class="slider-slide">
-                                    <img src="images/IMG_20251113_163011.jpg" alt="Серебряная кнопка" class="product-img">
+                                    <img src="images/Like31.jpg" alt="Серебряная кнопка" class="product-img">
                                 </div>
                             </div>
                         </div>
@@ -240,13 +240,13 @@
                         <div class="image-slider" data-product="gold">
                             <div class="slider-track">
                                 <div class="slider-slide">
-                                    <img src="images/IMG_20251113_163002.jpg" alt="Золотая кнопка" class="product-img">
+                                    <img src="images/Like11.jpg" alt="Золотая кнопка" class="product-img">
                                 </div>
                                 <div class="slider-slide">
-                                    <img src="images/IMG_20251113_163002.jpg" alt="Золотая кнопка" class="product-img">
+                                    <img src="images/Like21.jpg" alt="Золотая кнопка" class="product-img">
                                 </div>
                                 <div class="slider-slide">
-                                    <img src="images/IMG_20251113_163011.jpg" alt="Золотая кнопка" class="product-img">
+                                    <img src="images/Like31.jpg" alt="Золотая кнопка" class="product-img">
                                 </div>
                             </div>
                         </div>
@@ -408,13 +408,13 @@
                         <div class="image-slider" data-product="like">
                             <div class="slider-track">
                                 <div class="slider-slide">
-                                    <img src="images/IMG_20251113_163002.jpg" alt="Like Award" class="product-img">
+                                    <img src="images/Like11.jpg" alt="Like Award" class="product-img">
                                 </div>
                                 <div class="slider-slide">
-                                    <img src="images/IMG_20251113_163002.jpg" alt="Like Award" class="product-img">
+                                    <img src="images/Like21.jpg" alt="Like Award" class="product-img">
                                 </div>
                                 <div class="slider-slide">
-                                    <img src="images/IMG_20251113_163011.jpg" alt="Like Award" class="product-img">
+                                    <img src="images/Like31.jpg" alt="Like Award" class="product-img">
                                 </div>
                             </div>
                         </div>
