--- a/index.html
+++ b/index.html
@@ -198,13 +198,13 @@
                         <div class="image-slider" data-product="silver">
                             <div class="slider-track">
                                 <div class="slider-slide">
-                                    <img src="images/Like11.jpg" alt="Серебряная кнопка" class="product-img">
+                                    <img src="images/serebryanaya-knopka-youtube.jpg" alt="Серебряная кнопка" class="product-img">
                                 </div>
                                 <div class="slider-slide">
-                                    <img src="images/Like21.jpg" alt="Серебряная кнопка" class="product-img">
+                                    <img src="images/serebryanaya-knopka-youtube2.jpg" alt="Серебряная кнопка" class="product-img">
                                 </div>
                                 <div class="slider-slide">
-                                    <img src="images/Like31.jpg" alt="Серебряная кнопка" class="product-img">
+                                    <img src="images/serebryanaya-knopka-youtube3.jpg" alt="Серебряная кнопка" class="product-img">
                                 </div>
                             </div>
                         </div>
