Update image source in image slider

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         <div class="image-slider" data-product="gold">
                             <div class="slider-track">
                                 <div class="slider-slide">
-                                    <img src="images/zolotaya-knopka-youtube.jpg alt="Золотая кнопка" class="product-img">
+                                    <img src="images/zolotaya-knopka-youtube1.jpg"alt="Золотая кнопка" class="product-img">
                                 </div>
                                 <div class="slider-slide">
                                     <img src="images/zolotaya-knopka-youtube2.jpg" alt="Золотая кнопка" class="product-img">
