Update audio source path for letter 'А'

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         // Замените значения (URL) на пути к вашим MP3-файлам.
         // Используйте абсолютные URL (начиная с http:// или https://) или относительные пути.
         const LETTER_AUDIO_SOURCES = {
-            'А': 'your_folder/A.mp3', // <-- ЗАМЕНИТЬ
+            'А': 'audio/A.mp3', // <-- ЗАМЕНИТЬ
             'Б': 'your_folder/B.mp3', // <-- ЗАМЕНИТЬ
             'В': 'your_folder/V.mp3', // <-- ЗАМЕНИТЬ
             'Г': 'your_folder/G.mp3', // <-- ЗАМЕНИТЬ
