Change audio source URLs for letters А and Б
Updated audio source URLs for letters А and Б to local paths.

--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
         // Audio Setup - MP3 файлы с произношением букв
         // !!! ВАЖНО: Замените URL на пути к вашим аудиофайлам !!!
         const LETTER_AUDIO_SOURCES = {
-            'А': 'https://your-domain.com/sounds/А.mp3', // Замените на реальный URL
-            'Б': 'https://your-domain.com/sounds/Б.mp3',
+            'А': 'audio/A.mp3', // Замените на реальный URL
+            'Б': 'audio/B.mp3',
             'В': 'https://your-domain.com/sounds/В.mp3',
             'Г': 'https://your-domain.com/sounds/Г.mp3',
             'Д': 'https://your-domain.com/sounds/Д.mp3',
